# rog-article

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  justfile
cmake/: helpers.cmake
src/: config.hpp  entities.hpp  game.hpp  main.cpp  renderlist.hpp  timer.hpp
